Update gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
+
+# Built Visual Studio Code Extensions
+*.vsix
 # compiled output
 /dist
 /tmp
